feat: Implement User Service API with authentication and admin functionalities
- Added Postman collection and environment for API testing.
- Created main application class for Spring Boot.
- Developed UserController for handling user-related endpoints.
- Introduced DTOs for user registration, authentication, and response models.
- Implemented custom exceptions for error handling.
- Established User entity and repository for database interactions.
- Configured JWT authentication and security settings.
- Developed UserService for business logic related to user management.
- Added application properties for database and security configurations.
- Implemented unit tests for UserController and UserService.

--- a/backend/user-service/.gitignore
+++ b/backend/user-service/.gitignore
@@ -1,3 +1,26 @@
+# Ignore environment and secret files
+.env
+k8s/secret.yaml
+# Ignore CI/CD workflow artifacts
+.github/
+# Ignore IDE/editor/project files
+.vscode/
+.idea/
+*.iml
+# Ignore OS files
+.DS_Store
+Thumbs.db
+# Ignore build output
+target/
+# Ignore environment and secret files
+.env
+# Ignore IDE/editor/project files
+.vscode/
+.idea/
+*.iml
+# Ignore OS files
+.DS_Store
+Thumbs.db
 HELP.md
 target/
 .mvn/wrapper/maven-wrapper.jar
