--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,14 +36,14 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push user-service image
         run: |
           cd backend/user-service
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/user-service:${IMAGE_TAG} .
-          docker push ${{ secrets.DOCKER_USERNAME }}/user-service:${IMAGE_TAG}
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${IMAGE_TAG} .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${IMAGE_TAG}
 
   deploy:
     needs: docker-build-push
