fix: Add missing deployment of HPA configuration in CI/CD pipeline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,3 +72,4 @@ jobs:
       - name: Deploy to Kind
         run: |
           kubectl apply -f backend/user-service/k8s/
+          kubectl apply -f backend/user-service/k8s/hpa.yaml
