--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,6 +98,19 @@ jobs:
           kubectl port-forward svc/user-service 8080:8080 &
           sleep 5
 
+      - name: Wait for API to be available
+        run: |
+          for i in {1..24}; do
+            if curl -s http://localhost:8080/actuator/health | grep 'UP'; then
+              echo 'API is up!';
+              exit 0;
+            fi;
+            echo 'Waiting for API...';
+            sleep 5;
+          done;
+          echo 'API did not become available in time.';
+          exit 1;
+
       - name: Run Postman collection
         run: |
           newman run backend/user-service/postman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters cli
