--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -87,41 +87,22 @@ jobs:
         run: |
           kubectl apply -f backend/user-service/k8s/
 
-      - name: Wait for user-service pod to be ready
-        run: |
-          kubectl wait --for=condition=ready pod -l app=user-service -n default --timeout=120s || {
-            echo 'Pod did not become ready. Printing pod status and logs:';
-            kubectl get pods -l app=user-service -n default;
-            kubectl describe pod -l app=user-service -n default;
-            kubectl logs $(kubectl get pods -l app=user-service -n default -o jsonpath='{.items[0].metadata.name}');
-            exit 1;
-          }
+      # - name: Wait for user-service pod to be ready
+      #   run: |
+      #     kubectl wait --for=condition=ready pod -l app=user-service -n default --timeout=120s
 
-      - name: Install newman
-        run: |
-          npm install -g newman
+      # - name: Install newman
+      #   run: |
+      #     npm install -g newman
 
-      - name: Port-forward user-service
-        run: |
-          kubectl port-forward svc/user-service 8080:8080 &
-          sleep 5
+      # - name: Port-forward user-service
+      #   run: |
+      #     kubectl port-forward svc/user-service 8080:8080 &
+      #     sleep 5
 
-      - name: Wait for API to be available
-        run: |
-          for i in {1..24}; do
-            if curl -s http://localhost:8080/actuator/health | grep 'UP'; then
-              echo 'API is up!';
-              exit 0;
-            fi;
-            echo 'Waiting for API...';
-            sleep 5;
-          done;
-          echo 'API did not become available in time.';
-          exit 1;
-
-      - name: Run Postman collection
-        run: |
-          newman run backend/user-service/postman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters cli
-        env:
-          API_BASE_URL: http://localhost:8080
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      # - name: Run Postman collection
+      #   run: |
+      #     newman run backend/user-service/postman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters cli
+      #   env:
+      #     API_BASE_URL: http://localhost:8080
+      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
