feat: Update CI/CD pipeline to create user-service secret and enhance pod readiness checks

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,13 +23,14 @@ jobs:
         run: |
           cd backend/user-service
           ./mvnw clean verify
-
+  
   docker-build-push:
     needs: build-test
     runs-on: ubuntu-latest
     env:
       IMAGE_TAG: ${{ github.sha }}
     steps:
+      
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -44,59 +45,58 @@ jobs:
           cd backend/user-service
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${IMAGE_TAG} .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${IMAGE_TAG}
-
+  
   deploy:
     needs: docker-build-push
     runs-on: ubuntu-latest
     environment: production
     steps:
+      
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'latest'
-
       - name: Set up Kind cluster
         uses: helm/kind-action@v1.9.0
-
-      - name: Debug Kind cluster context
-        run: |
-          echo 'KUBECONFIG:'
-          echo $KUBECONFIG
-          kubectl config current-context || true
-          kubectl cluster-info || true
-          kubectl get nodes || true
 
       - name: Update image tag in k8s manifests
         run: |
           sed -i "s|image: .*/user-service:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${{ github.sha }}|g" backend/user-service/k8s/deployment.yaml
-
+      
+      - name: Create user-service-secret
+        run: |
+          kubectl create secret generic user-service-secret \
+            --from-literal=POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
+            --from-literal=POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
+            --from-literal=JWT_SECRET=${{ secrets.JWT_SECRET }}
 
       - name: Deploy to Kind
         run: |
           kubectl apply -f backend/user-service/k8s/
-
-      # - name: Wait for user-service pod to be ready
-      #   run: |
-      #     kubectl wait --for=condition=ready pod -l app=user-service -n default --timeout=120s
-
-      # - name: Install newman
-      #   run: |
-      #     npm install -g newman
-
-      # - name: Port-forward user-service
-      #   run: |
-      #     kubectl port-forward svc/user-service 8080:8080 &
-      #     sleep 5
-
-      # - name: Run Postman collection
-      #   run: |
-      #     newman run backend/user-service/postman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters cli
-      #   env:
-      #     API_BASE_URL: http://localhost:8080
-      #     JWT_SECRET: ${{ secrets.JWT_SECRET }}
+      
+      - name: Wait for user-service pod to be ready
+        run: |
+          kubectl wait --for=condition=ready pod -l app=user-service -n default --timeout=120s || {
+            echo 'Pod did not become ready. Printing pod status and logs:';
+            kubectl get pods -l app=user-service -n default;
+            kubectl describe pod -l app=user-service -n default;
+            kubectl logs $(kubectl get pods -l app=user-service -n default -o jsonpath='{.items[0].metadata.name}');
+            exit 1;
+          }
+      
+      - name: Install newman
+        run: |
+          npm install -g newman
+      
+      - name: Port-forward user-service
+        run: |
+          kubectl port-forward svc/user-service 8080:8080 &
+          sleep 5
+      
+      - name: Run Postman collection
+        run: |
+          newman run backend/user-service/postman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters cli
+        env:
+          API_BASE_URL: http://localhost:8080
