--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,6 +97,12 @@ jobs:
       
       - name: Run Postman collection
         run: |
-          newman run backend/user-service/postman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters clitman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters cli
+          newman run backend/user-service/postman_collection.json -e backend/user-service/postman_environment.json --delay-request 100 --timeout-request 10000 --insecure --bail --reporters cli
         env:
           API_BASE_URL: http://127.0.0.1:8080
+
+      - name: Show user-service pod logs
+        if: always()
+        run: |
+          echo '--- user-service pod logs ---'
+          kubectl logs $(kubectl get pods -l app=user-service -n default -o jsonpath='{.items[0].metadata.name}') -n default || echo 'Could not get logs.'
