fix: Update CI/CD pipeline to apply PostgreSQL configuration and simplify environment variables in user-service deployment

--- a/backend/user-service/k8s/deployment.yaml
+++ b/backend/user-service/k8s/deployment.yaml
@@ -24,15 +24,13 @@ spec:
             - name: SPRING_PROFILES_ACTIVE
               value: "prod"
             - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: user-service-secret
-                  key: POSTGRES_USER
+              value: "user"
             - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: user-service-secret
-                  key: POSTGRES_PASSWORD
+              value: "password"
+            - name: POSTGRES_DB
+              value: "userdb"
+            - name: SPRING_DATASOURCE_URL
+              value: "jdbc:postgresql://postgres:5432/userdb"
             - name: JWT_SECRET
               valueFrom:
                 secretKeyRef:
