--- a/.github/workflows/user-service-ci.yml
+++ b/.github/workflows/user-service-ci.yml
@@ -1,10 +1,16 @@
-name: CI/CD Pipeline
+name: User Service CI/CD
 
 on:
   push:
-    branches: [main, feature/*]
+    branches: [main, develop, feature/*]
+    paths:
+      - backend/user-service/**
   pull_request:
-    branches: [main, feature/*]
+    branches: [main, develop, feature/*]
+    paths:
+      - backend/user-service/**
+
+
 
 jobs:
   build-test:
@@ -24,6 +30,8 @@ jobs:
           cd backend/user-service
           ./mvnw clean verify
   
+
+
   docker-build-push:
     needs: build-test
     runs-on: ubuntu-latest
@@ -46,6 +54,8 @@ jobs:
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${IMAGE_TAG} .
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/user-service:${IMAGE_TAG}
   
+
+
   deploy:
     needs: docker-build-push
     runs-on: ubuntu-latest
@@ -75,6 +85,7 @@ jobs:
       - name: Deploy to Kind
         run: |
           kubectl apply -f backend/user-service/k8s/
+          
       - name: Wait for postgres pod to be ready
         run: |
           kubectl wait --for=condition=ready pod -l app=postgres -n default --timeout=120s || {
