--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Update image tag in k8s manifests
         run: |
-          sed -i "s|image: .*/docutrace-frontend:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/docutrace-frontend:${{ github.sha }}|g" frontend/k8s/deployment.yaml
+          sed -i "s|image: .*/docutrace-frontend:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/docutrace-frontend:${IMAGE_TAG}|g" frontend/k8s/deployment.yaml
 
       - name: Deploy to Kind
         run: |
