--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
     needs: build-test
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: ${{ github.sha }}
+      IMAGE_TAG: {latest}  #${{ github.sha }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
