fix: update IMAGE_TAG in CI/CD workflow and deployment manifest for consistency

--- a/frontend/k8s/deployment.yaml
+++ b/frontend/k8s/deployment.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: docutrace-frontend:latest
+          image: ${{ secrets.DOCKERHUB_USERNAME}}/docutrace-frontend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           resources:
