--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
     needs: build-test
     runs-on: ubuntu-latest
     env:
-      IMAGE_TAG: {latest}  #${{ github.sha }}
+      IMAGE_TAG: ${{ github.sha }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -63,13 +63,14 @@ jobs:
       - name: Set up Kind cluster
         uses: helm/kind-action@v1.9.0
 
-      - name: Update image tag in k8s manifests
-        run: |
-          sed -i "s|image: .*/docutrace-frontend:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/docutrace-frontend:${IMAGE_TAG}|g" frontend/k8s/deployment.yaml
-
       - name: Deploy to Kind
         run: |
           kubectl apply -f frontend/k8s/
+
+      - name: Set image on deployment
+        run: |
+          kubectl set image deployment/frontend frontend=${{ secrets.DOCKERHUB_USERNAME }}/docutrace-frontend:${{ github.sha }} --namespace default
+          kubectl rollout status deployment/frontend --timeout=120s
 
       - name: Wait for frontend pod to be ready
         run: |
