fix: Simplify docker-compose configuration by correcting build context and env file paths

--- a/backend/user-service/docker-compose.yml
+++ b/backend/user-service/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   db:
     image: postgres:16
@@ -14,12 +13,12 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   user-service:
-    build: ./user-service
+    build: .
     container_name: user_service
     depends_on:
       - db
     env_file:
-      - ./user-service/.env
+      - .env
     environment:
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
       POSTGRES_USER: ${POSTGRES_USER}
